cbm/src/store/store.h

/* ── Opaque handle ──────────────────────────────────────────────── */

typedef struct cbm_store cbm_store_t;
/* ── Schema introspection ───────────────────────────────────────── */

typedef struct {
    const char *label;
    int count;
    char **properties; /* distinct property keys for this label (base + JSON) */
    int property_count;
} cbm_label_count_t;
typedef struct {
    const char *type;
    int count;
    char **properties; /* distinct property keys for this edge type (base + JSON) */
    int property_count;
} cbm_type_count_t;
typedef struct {
    cbm_label_count_t *node_labels;
    int node_label_count;
    cbm_type_count_t *edge_types;
    int edge_type_count;
    /* relationship patterns like "(Function)-[CALLS]->(Function) [123x]" */
    const char **rel_patterns;
    int rel_pattern_count;
    const char **sample_func_names;
    int sample_func_count;
    const char **sample_class_names;
    int sample_class_count;
    const char **sample_qns;
    int sample_qn_count;
} cbm_schema_info_t;
/* Like cbm_store_get_schema but skips per-label/per-type JSON property-key
 * discovery (json_each scans over every row) — for callers that only need
 * label/type counts, e.g. get_architecture. */
int cbm_store_get_schema_counts(cbm_store_t *s, const char *project, cbm_schema_info_t *out);
int cbm_store_get_schema_counts_scoped(cbm_store_t *s, const char *project, const char *path,
                                       cbm_schema_info_t *out);
/* Free a schema info's allocated memory. */
void cbm_store_schema_free(cbm_schema_info_t *out);
/* ── Architecture ───────────────────────────────────────────────── */

typedef struct {
    const char *language;
    int file_count;
} cbm_language_count_t;
typedef struct {
    const char *name;
    int node_count;
    int fan_in;
    int fan_out;
} cbm_package_summary_t;
typedef struct {
    const char *name;
    const char *qualified_name;
    const char *file;
} cbm_entry_point_t;
typedef struct {
    const char *method;
    const char *path;
    const char *handler;
} cbm_route_info_t;
typedef struct {
    const char *name;
    const char *qualified_name;
    int fan_in;
} cbm_hotspot_t;
typedef struct {
    const char *from;
    const char *to;
    int call_count;
} cbm_cross_pkg_boundary_t;
typedef struct {
    const char *from;
    const char *to;
    const char *type;
    int count;
} cbm_service_link_t;
typedef struct {
    const char *name;
    const char *layer;
    const char *reason;
} cbm_package_layer_t;
typedef struct {
    int id;
    const char *label;
    int members;
    double cohesion;
    const char **top_nodes;
    int top_node_count;
    const char **packages;
    int package_count;
    const char **edge_types;
    int edge_type_count;
} cbm_cluster_info_t;
typedef struct {
    const char *path;
    const char *type; /* "dir" or "file" */
    int children;
} cbm_file_tree_entry_t;
typedef struct {
    /* Pointers first to minimize padding */
    cbm_language_count_t *languages;
    cbm_package_summary_t *packages;
    cbm_entry_point_t *entry_points;
    cbm_route_info_t *routes;
    cbm_hotspot_t *hotspots;
    cbm_cross_pkg_boundary_t *boundaries;
    cbm_service_link_t *services;
    cbm_package_layer_t *layers;
    cbm_cluster_info_t *clusters;
    cbm_file_tree_entry_t *file_tree;
    /* Counts after pointers */
    int language_count;
    int package_count;
    int entry_point_count;
    int route_count;
    int hotspot_count;
    int boundary_count;
    int service_count;
    int layer_count;
    int cluster_count;
    int file_tree_count;
} cbm_architecture_info_t;
int cbm_store_get_architecture(cbm_store_t *s, const char *project, const char *path,
                               const char **aspects, int aspect_count,
                               cbm_architecture_info_t *out);
void cbm_store_architecture_free(cbm_architecture_info_t *out);
typedef struct {
    const char *project;
    const char *content;
    const char *created_at;
    const char *updated_at;
} cbm_adr_t;
int cbm_store_adr_store(cbm_store_t *s, const char *project, const char *content);
int cbm_store_adr_get(cbm_store_t *s, const char *project, cbm_adr_t *out);
int cbm_store_adr_delete(cbm_store_t *s, const char *project);
int cbm_store_adr_update_sections(cbm_store_t *s, const char *project, const char **keys,
                                  const char **values, int count, cbm_adr_t *out);
void cbm_store_adr_free(cbm_adr_t *adr);
/* ADR section parsing/rendering (pure functions, no store needed) */

enum { PROPS_MAX = 16 };
typedef struct {
    char *keys[PROPS_MAX];
    char *values[PROPS_MAX];
    int count;
} cbm_adr_sections_t;
cbm_adr_sections_t cbm_adr_parse_sections(const char *content);
char *cbm_adr_render(const cbm_adr_sections_t *sections);
int cbm_adr_validate_content(const char *content, char *errbuf, int errbuf_size);
int cbm_adr_validate_section_keys(const char **keys, int count, char *errbuf, int errbuf_size);
void cbm_adr_sections_free(cbm_adr_sections_t *s);
/* ── Search helpers (exposed for testing) ───────────────────────── */

/* Convert a glob pattern to SQL LIKE pattern. Caller must free result. */
char *cbm_glob_to_like(const char *pattern);
/* Extract literal substrings (>= 3 chars) from a regex pattern for LIKE pre-filtering.
 * Bails on alternation (|). Returns count of hints written to out[].
 * Each out[i] is malloc'd — caller must free each string. */
int cbm_extract_like_hints(const char *pattern, char **out, int max_out);
/* Prepend (?i) to a regex pattern if not already present.
 * Returns a static buffer — do NOT free. */
const char *cbm_ensure_case_insensitive(const char *pattern);
/* Strip leading (?i) from a regex pattern.
 * Returns a static buffer — do NOT free. */
const char *cbm_strip_case_flag(const char *pattern);
/* ── Architecture helpers (exposed for testing) ────────────────── */

const char *cbm_qn_to_package(const char *qn);
const char *cbm_qn_to_top_package(const char *qn);
bool cbm_is_test_file_path(const char *fp);
int cbm_store_find_architecture_docs(cbm_store_t *s, const char *project, char ***out, int *count);
/* ── Community detection (Leiden) ──────────────────────────────── */

typedef struct {
    int64_t src;
    int64_t dst;
} cbm_louvain_edge_t;
typedef struct {
    int64_t node_id;
    int community;
} cbm_louvain_result_t;
/* Multi-level Leiden community detection (Traag, Waltman & van Eck 2019,
 * arXiv:1810.08473): local moving + refinement + aggregation, repeated until
 * the partition can no longer be coarsened. Refinement guarantees every
 * reported community is internally connected. The resolution parameter
 * controls granularity (higher -> more, smaller communities); 1.0 is standard.
 * Allocates *out (length *out_count == node_count); the caller frees it. */
int cbm_leiden(const int64_t *nodes, int node_count, const cbm_louvain_edge_t *edges,
               int edge_count, double resolution, cbm_louvain_result_t **out, int *out_count);