crates/cbm-sys/src/bindings.rs

unsafe extern "C" {
    pub fn cbm_store_get_schema_counts(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        out: *mut cbm_schema_info_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_get_schema_counts_scoped(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        path: *const ::std::os::raw::c_char,
        out: *mut cbm_schema_info_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_schema_free(out: *mut cbm_schema_info_t);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_language_count_t {
    pub language: *const ::std::os::raw::c_char,
    pub file_count: ::std::os::raw::c_int,
}
impl Default for cbm_language_count_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_package_summary_t {
    pub name: *const ::std::os::raw::c_char,
    pub node_count: ::std::os::raw::c_int,
    pub fan_in: ::std::os::raw::c_int,
    pub fan_out: ::std::os::raw::c_int,
}
impl Default for cbm_package_summary_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_entry_point_t {
    pub name: *const ::std::os::raw::c_char,
    pub qualified_name: *const ::std::os::raw::c_char,
    pub file: *const ::std::os::raw::c_char,
}
impl Default for cbm_entry_point_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_route_info_t {
    pub method: *const ::std::os::raw::c_char,
    pub path: *const ::std::os::raw::c_char,
    pub handler: *const ::std::os::raw::c_char,
}
impl Default for cbm_route_info_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_hotspot_t {
    pub name: *const ::std::os::raw::c_char,
    pub qualified_name: *const ::std::os::raw::c_char,
    pub fan_in: ::std::os::raw::c_int,
}
impl Default for cbm_hotspot_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_cross_pkg_boundary_t {
    pub from: *const ::std::os::raw::c_char,
    pub to: *const ::std::os::raw::c_char,
    pub call_count: ::std::os::raw::c_int,
}
impl Default for cbm_cross_pkg_boundary_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_service_link_t {
    pub from: *const ::std::os::raw::c_char,
    pub to: *const ::std::os::raw::c_char,
    pub type_: *const ::std::os::raw::c_char,
    pub count: ::std::os::raw::c_int,
}
impl Default for cbm_service_link_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_package_layer_t {
    pub name: *const ::std::os::raw::c_char,
    pub layer: *const ::std::os::raw::c_char,
    pub reason: *const ::std::os::raw::c_char,
}
impl Default for cbm_package_layer_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_cluster_info_t {
    pub id: ::std::os::raw::c_int,
    pub label: *const ::std::os::raw::c_char,
    pub members: ::std::os::raw::c_int,
    pub cohesion: f64,
    pub top_nodes: *mut *const ::std::os::raw::c_char,
    pub top_node_count: ::std::os::raw::c_int,
    pub packages: *mut *const ::std::os::raw::c_char,
    pub package_count: ::std::os::raw::c_int,
    pub edge_types: *mut *const ::std::os::raw::c_char,
    pub edge_type_count: ::std::os::raw::c_int,
}
impl Default for cbm_cluster_info_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_file_tree_entry_t {
    pub path: *const ::std::os::raw::c_char,
    pub type_: *const ::std::os::raw::c_char,
    pub children: ::std::os::raw::c_int,
}
impl Default for cbm_file_tree_entry_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_architecture_info_t {
    pub languages: *mut cbm_language_count_t,
    pub packages: *mut cbm_package_summary_t,
    pub entry_points: *mut cbm_entry_point_t,
    pub routes: *mut cbm_route_info_t,
    pub hotspots: *mut cbm_hotspot_t,
    pub boundaries: *mut cbm_cross_pkg_boundary_t,
    pub services: *mut cbm_service_link_t,
    pub layers: *mut cbm_package_layer_t,
    pub clusters: *mut cbm_cluster_info_t,
    pub file_tree: *mut cbm_file_tree_entry_t,
    pub language_count: ::std::os::raw::c_int,
    pub package_count: ::std::os::raw::c_int,
    pub entry_point_count: ::std::os::raw::c_int,
    pub route_count: ::std::os::raw::c_int,
    pub hotspot_count: ::std::os::raw::c_int,
    pub boundary_count: ::std::os::raw::c_int,
    pub service_count: ::std::os::raw::c_int,
    pub layer_count: ::std::os::raw::c_int,
    pub cluster_count: ::std::os::raw::c_int,
    pub file_tree_count: ::std::os::raw::c_int,
}
impl Default for cbm_architecture_info_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn cbm_store_get_architecture(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        path: *const ::std::os::raw::c_char,
        aspects: *mut *const ::std::os::raw::c_char,
        aspect_count: ::std::os::raw::c_int,
        out: *mut cbm_architecture_info_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_architecture_free(out: *mut cbm_architecture_info_t);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_adr_t {
    pub project: *const ::std::os::raw::c_char,
    pub content: *const ::std::os::raw::c_char,
    pub created_at: *const ::std::os::raw::c_char,
    pub updated_at: *const ::std::os::raw::c_char,
}
impl Default for cbm_adr_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn cbm_store_adr_store(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        content: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_adr_get(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        out: *mut cbm_adr_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_adr_delete(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_adr_update_sections(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        keys: *mut *const ::std::os::raw::c_char,
        values: *mut *const ::std::os::raw::c_char,
        count: ::std::os::raw::c_int,
        out: *mut cbm_adr_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_adr_free(adr: *mut cbm_adr_t);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_adr_sections_t {
    pub keys: [*mut ::std::os::raw::c_char; 16usize],
    pub values: [*mut ::std::os::raw::c_char; 16usize],
    pub count: ::std::os::raw::c_int,
}
impl Default for cbm_adr_sections_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn cbm_adr_parse_sections(content: *const ::std::os::raw::c_char) -> cbm_adr_sections_t;
}
unsafe extern "C" {
    pub fn cbm_adr_render(sections: *const cbm_adr_sections_t) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn cbm_adr_validate_content(
        content: *const ::std::os::raw::c_char,
        errbuf: *mut ::std::os::raw::c_char,
        errbuf_size: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_adr_validate_section_keys(
        keys: *mut *const ::std::os::raw::c_char,
        count: ::std::os::raw::c_int,
        errbuf: *mut ::std::os::raw::c_char,
        errbuf_size: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_adr_sections_free(s: *mut cbm_adr_sections_t);
}
unsafe extern "C" {
    pub fn cbm_glob_to_like(pattern: *const ::std::os::raw::c_char) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn cbm_extract_like_hints(
        pattern: *const ::std::os::raw::c_char,
        out: *mut *mut ::std::os::raw::c_char,
        max_out: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_ensure_case_insensitive(
        pattern: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn cbm_strip_case_flag(
        pattern: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn cbm_qn_to_package(qn: *const ::std::os::raw::c_char) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn cbm_qn_to_top_package(
        qn: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn cbm_is_test_file_path(fp: *const ::std::os::raw::c_char) -> bool;
}
unsafe extern "C" {
    pub fn cbm_store_find_architecture_docs(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        out: *mut *mut *mut ::std::os::raw::c_char,
        count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct cbm_louvain_edge_t {
    pub src: i64,
    pub dst: i64,
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct cbm_louvain_result_t {
    pub node_id: i64,
    pub community: ::std::os::raw::c_int,
}
unsafe extern "C" {
    pub fn cbm_leiden(
        nodes: *const i64,
        node_count: ::std::os::raw::c_int,
        edges: *const cbm_louvain_edge_t,
        edge_count: ::std::os::raw::c_int,
        resolution: f64,
        out: *mut *mut cbm_louvain_result_t,
        out_count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
